cmake_minimum_required(VERSION 3.0)
project(JunViewerC)

include_directories(include)
file(GLOB SOURCES "src/*.c")
add_executable(jvc ${SOURCES})

find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
include_directories(${GTK3_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})
target_link_libraries(jvc ${GTK3_LIBRARIES})
